--- a/app/src/main/res/layout/autocomplete.xml
+++ b/app/src/main/res/layout/autocomplete.xml
@@ -5,4 +5,5 @@
     android:layout_height="wrap_content"
     android:padding="16dp"
     android:ellipsize="end"
-    android:maxLines="1"/>
+    android:maxLines="1"
+    android:id="@+id/txtViewAutoComplete"/>
